--- a/templates/home.html
+++ b/templates/home.html
@@ -42,18 +42,6 @@
             </p>
           </div>
           <ul id="rowers_list">
-            <!-- <li class="rower_selected" id="rower_0" onclick="selectRower(this.id)">
-              Russell
-            </li>
-            <li class="rower" id="rower_1" onclick="selectRower(this.id)">
-              Sathya
-            </li>
-            <li class="rower" id="rower_2" onclick="selectRower(this.id)">
-              Alex
-            </li>
-            <li class="rower" id="rower_3" onclick="selectRower(this.id)">
-              James
-            </li> -->
           </ul>
         </div>
         <div id="float_right_div">
@@ -88,7 +76,7 @@
             Workout Day:
             <div id="workout_selector" class="dropdown">
               <button class="btn btn-primary dropdown-toggle" type="button"
-                data-toggle="dropdown" id="workout_button">
+                data-toggle="dropdown" id="workout_button">No Workouts
               </button>
               <ul class="dropdown-menu" id="workouts">
               </ul>
@@ -101,94 +89,11 @@
         <p id="graph_title"></p>
         <div id="d3Graph">
         </div>
+        <p id="graph_x_axis">Time</p>
       </div>
         <div id="averages_div">
           <p id="averages_div_title">Averages</p>
             <table id="averages_table">
-              <tr>
-                <th class="title_cell">Stat</th>
-                <th class="title_cell">Your Average</th>
-                <th class="title_cell">Team Average</th>
-                <th class="title_cell">+/-</th>
-              </tr>
-              <tr>
-                <td>Power</td>
-                <td>3000</td>
-                <td>20</td>
-                <td>Germany</td>
-              </tr>
-              <tr>
-                <td>Speed</td>
-                <td>22</td>
-                <td>88</td>
-                <td>Mexico</td>
-              </tr>
-              <tr>
-                <td>Slip</td>
-                <td>22</td>
-                <td>45</td>
-                <td>Austria</td>
-              </tr>
-              <tr>
-                <td>Wash</td>
-                <td>15 degrees</td>
-                <td>Helen Bennett</td>
-                <td>UK</td>
-              </tr>
-              <tr>
-                <td>Stroke/Min</td>
-                <td>Laughing Bacchus Winecellars</td>
-                <td>Yoshi Tannamuri</td>
-                <td>Canada</td>
-              </tr>
-              <tr>
-                <td>Catch Angle</td>
-                <td>Magazzini Alimentari Riuniti</td>
-                <td>Giovanni Rovelli</td>
-                <td>Italy</td>
-              </tr>
-              <tr>
-                <td>Finish Angle</td>
-                <td>Magazzini Alimentari Riuniti</td>
-                <td>Giovanni Rovelli</td>
-                <td>Italy</td>
-              </tr>
-              <tr>
-                <td>Max Force Angle</td>
-                <td>Magazzini Alimentari Riuniti</td>
-                <td>Giovanni Rovelli</td>
-                <td>Italy</td>
-              </tr>
-              <tr>
-                <td>Max Force</td>
-                <td>Magazzini Alimentari Riuniti</td>
-                <td>Giovanni Rovelli</td>
-                <td>Italy</td>
-              </tr>
-              <tr>
-                <td>Average Force</td>
-                <td>Magazzini Alimentari Riuniti</td>
-                <td>Giovanni Rovelli</td>
-                <td>Italy</td>
-              </tr>
-              <tr>
-                <td>Work</td>
-                <td>Magazzini Alimentari Riuniti</td>
-                <td>Giovanni Rovelli</td>
-                <td>Italy</td>
-              </tr>
-              <tr>
-                <td>Distance/Stroke</td>
-                <td>Magazzini Alimentari Riuniti</td>
-                <td>Giovanni Rovelli</td>
-                <td>Italy</td>
-              </tr>
-              <tr>
-                <td>Heart Rate</td>
-                <td>Magazzini Alimentari Riuniti</td>
-                <td>Giovanni Rovelli</td>
-                <td>Italy</td>
-              </tr>
             </table>
           </div>
         </div>
