--- a/public/css/manage-data.css
+++ b/public/css/manage-data.css
@@ -228,7 +228,7 @@ button {
     top: 0;
 		margin-left: 30%;
 		margin-top: 5%;
-    width: 600px; /* Full width */
+    width: 700px; /* Full width */
     height: 500px; /* Full height */
     overflow: auto; /* Enable scroll if needed */
 		text-align: center;
@@ -261,15 +261,15 @@ button {
 }
 
 /* The Close Button */
-.close {
+.closeModal {
     color: white;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+.closeModal:hover,
+.closeModal:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
@@ -331,4 +331,9 @@ br {
 
 #username {
 	display: none;
+}
+
+#txtFileUpload {
+	margin: auto;
+	display: inline;
 }
