cannot add same data for workout

--- a/public/css/manage-data.css
+++ b/public/css/manage-data.css
@@ -288,9 +288,16 @@ button {
 	margin: auto;
 }
 
-#modal-footer-user {
+#modal-footer-user-success {
     padding: 2px 8px;
     background-color: #5cb85c;
+    color: white;
+		padding-bottom: 5px;
+}
+
+#modal-footer-user-failure {
+    padding: 2px 8px;
+    background-color: red;
     color: white;
 		padding-bottom: 5px;
 }
