Changed text on manage data

--- a/templates/manage-data.html
+++ b/templates/manage-data.html
@@ -29,17 +29,18 @@
       <div id="manage-data-subcontainer">
         <div class="manage-data-button-container" id="manage-data-user-container">
           <img class="manage-data-img" src="/images/users.png" alt="Users Icon" height="80" width="80">
-          <p class="manage-data-p"> Lorem ipsum dolor sit amet, sonet simul ocurreret mel te. Mollis discere vel no, sit no posse indoctum mnesarchum. Fuisset tincidunt instructior no eos, ea dignissim hendrerit mei.</p>
+          <p class="manage-data-p">View Your Current Roster<br> Add New Members <br> Remove Current  Members<br> See Individual and Group Workout History <br> </p>
           <button onclick="toggleUsers()" class="manage-data-button" id="manage-users-data-button"> Manage Users </button>
         </div>
         <div class="manage-data-button-container" id="manage-data-boat-container">
           <img class="manage-data-img" src="/images/boats.png" alt="Users Icon" height="80" width="80">
-          <p class="manage-data-p"> Lorem ipsum dolor sit amet, sonet simul ocurreret mel te. Mollis discere vel no, sit no posse indoctum mnesarchum. Fuisset tincidunt instructior no eos, ea dignissim hendrerit mei.</p>
+          <p class="manage-data-p"> View your Current Boats <br> Add new Boats <br> Remove Existing Boats <br> View Existing Boat Specifications</p>
           <button onclick="toggleBoats()" class="manage-data-button" id="manage-boats-data-button"> Manage Boats </button>
         </div>
         <div class="manage-data-button-container" id="manage-data-data-container">
           <img class="manage-data-img" src="/images/db.png" alt="DB Icon" height="80" width="80">
-          <p class="manage-data-p"> Lorem ipsum dolor sit amet, sonet simul ocurreret mel te. Mollis discere vel no, sit no posse indoctum mnesarchum. Fuisset tincidunt instructior no eos, ea dignissim hendrerit mei.</p>
+          <p class="manage-data-p"> Upload New Workout Data <br> Remove Data From Workout Database
+            <br> View Previous Workouts and The Workout Details</p>
           <!-- <a href="/upload-data"> -->
           <button onclick="toggleWorkouts()" class="manage-data-button" id="manage-workouts-data-button"> Manage Data </button>
           <!-- </a> -->
