--- a/public/css/manage-data.css
+++ b/public/css/manage-data.css
@@ -234,6 +234,20 @@ button {
 		text-align: center;
 }
 
+.usermodal2 {
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 50px; /* Location of the box */
+    left: 0;
+    top: 0;
+		margin-left: 15%;
+		margin-top: 5%;
+    width: 900px; /* Full width */
+    height: 500px; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+		text-align: center;
+}
+
 /* Modal Content */
 .modal-content {
     position: relative;
