added gaps and python server, first post graduation push

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <script src="http://d3js.org/d3.v4.min.js" charset="utf-8"></script>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -100,6 +100,9 @@
     </div>
   </div>
   </div>
+</body>
+  <script src="/data_test/neighborhoods_boston.json"></script>
   <script src="/js/graph.js"></script>
   <script src="/js/home.js"></script>
+  <!-- <script src="/js/map.js"></script> -->
 </html>
