--- a/templates/home.html
+++ b/templates/home.html
@@ -91,6 +91,7 @@
         </div>
         <p id="graph_x_axis">Time</p>
       </div>
+        <div id="mapid"></div>
         <div id="averages_div">
           <p id="averages_div_title">Averages</p>
             <table id="averages_table">
@@ -101,8 +102,15 @@
   </div>
   </div>
 </body>
-  <script src="/data_test/neighborhoods_boston.json"></script>
+  <script src="http://d3js.org/topojson.v1.min.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+   integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+   crossorigin=""/>
+   <!-- Make sure you put this AFTER Leaflet's CSS -->
+ <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+   integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+   crossorigin=""></script>
+  <script src="/js/map.js"></script>
   <script src="/js/graph.js"></script>
   <script src="/js/home.js"></script>
-  <!-- <script src="/js/map.js"></script> -->
 </html>
