--- a/templates/home.html
+++ b/templates/home.html
@@ -23,6 +23,8 @@
     <div id="banner">
       <a href="/profile"><img id="banner_logo" src="/images/freespeed_logo.png"></img></a>
       <a href="/manage-data"><button id="upload_button" class="banner_button">Manage Data</button></a>
+      <a href="/chartIntervals"><button id="upload_button" class="banner_button">Graph</button></a>
+
       <div id="banner_right">
         <div class="dropdown" id="profile_dropdown">
           <button class="btn btn-primary dropdown-toggle"
@@ -110,6 +112,8 @@
  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
    integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
    crossorigin=""></script>
+   <!-- Plotly.js -->
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="/js/map.js"></script>
   <script src="/js/graph.js"></script>
   <script src="/js/home.js"></script>
